# swagger/swagger.yml
@@ -35,6 +35,24 @@ paths:
           description: responses.Response
         "404":
           description: responses.Response
+  /food/listfoodstore:
+    get:
+      tags:
+      - food
+      summary: '"Get List Food In Store"'
+      description: Get List Food In Store
+      operationId: FoodController.Get List Food In Store
+      parameters:
+      - in: query
+        name: sid
+        description: sid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
   /food/listrand:
     get:
       tags:
@@ -59,19 +77,13 @@ paths:
           description: responses.Response
         "404":
           description: responses.Response
-  /food/liststore:
+  /food/store:
     get:
       tags:
       - food
-      summary: '"Get List Food In Store"'
-      description: Get List Food In Store
-      operationId: FoodController.Get List Food In Store
-      parameters:
-      - in: query
-        name: sid
-        description: sid
-        required: true
-        type: string
+      summary: '"Get List Store"'
+      description: Get List Store
+      operationId: FoodController.Get List Store
       responses:
         "200":
           description: responses.Response
@@ -209,6 +221,30 @@ paths:
           description: ""
         "404":
           description: ""
+  /order/:
+    post:
+      tags:
+      - order
+      summary: '"Create Order"'
+      description: Create Order
+      operationId: OrderController.Create Order
+      parameters:
+      - in: header
+        name: auth
+        description: token
+        required: true
+        type: string
+      - in: body
+        name: data
+        description: Req Order
+        required: true
+        schema:
+          $ref: '#/definitions/requests.ReqOrder'
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
   /statistic/:
     get:
       tags:
@@ -269,6 +305,90 @@ paths:
             $ref: '#/definitions/responses.ResStatisticStore'
         "404":
           description: responses.ResStatisticStore
+  /store/comment:
+    post:
+      tags:
+      - store
+      summary: '"Post Comment"'
+      description: Post Comment
+      operationId: StoreController.Post Comment
+      parameters:
+      - in: header
+        name: auth
+        description: token
+        required: true
+        type: string
+      - in: body
+        name: data
+        description: comment
+        required: true
+        schema:
+          $ref: '#/definitions/models.Comment'
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
+  /store/comments:
+    get:
+      tags:
+      - store
+      summary: '"Get Comment"'
+      description: Get Comment
+      operationId: StoreController.Get Comment
+      parameters:
+      - in: query
+        name: sid
+        description: sid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
+  /store/rate:
+    post:
+      tags:
+      - store
+      summary: '"Set Rate"'
+      description: Set Rate
+      operationId: StoreController.Set Rate
+      parameters:
+      - in: header
+        name: auth
+        description: token
+        required: true
+        type: string
+      - in: body
+        name: data
+        description: sid
+        required: true
+        schema:
+          $ref: '#/definitions/requests.RateReq'
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
+  /store/rates:
+    get:
+      tags:
+      - store
+      summary: '"Get Rate"'
+      description: Get Rate
+      operationId: StoreController.Get Rate
+      parameters:
+      - in: query
+        name: sid
+        description: sid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: responses.Response
+        "404":
+          description: responses.Response
   /user/creshipper:
     post:
       tags:
@@ -402,7 +522,7 @@ paths:
         "404":
           description: responses.ResStore
 definitions:
-  857.0xc000650ed0.false:
+  857.0xc0006aa240.false:
     title: "false"
     type: object
   models.Authorize:
@@ -423,6 +543,25 @@ definitions:
         type: string
       total_count:
         type: string
+  models.Comment:
+    title: Comment
+    type: object
+    properties:
+      comment:
+        type: string
+      create_date:
+        type: integer
+        format: int64
+      id:
+        type: integer
+        format: int64
+      id_store:
+        type: string
+      id_user:
+        type: string
+      update_date:
+        type: integer
+        format: int64
   models.Customers:
     title: Customers
     type: object
@@ -627,6 +766,44 @@ definitions:
         type: string
       username:
         type: string
+  requests.Foods:
+    title: Foods
+    type: object
+    properties:
+      id_food:
+        type: string
+      quantity:
+        type: integer
+        format: int64
+  requests.RateReq:
+    title: RateReq
+    type: object
+    properties:
+      rate:
+        type: integer
+        format: int64
+      store_id:
+        type: string
+      user_id:
+        type: string
+  requests.ReqOrder:
+    title: ReqOrder
+    type: object
+    properties:
+      address:
+        type: string
+      id:
+        type: string
+      list_food:
+        type: array
+        items:
+          $ref: '#/definitions/requests.Foods'
+      options_orderfood:
+        type: string
+      shipper_id:
+        type: string
+      store_id:
+        type: string
   responses.Err:
     title: Err
     type: object
@@ -697,6 +874,6 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/857.0xc000650ed0.false'
+        $ref: '#/definitions/857.0xc0006aa240.false'
       error:
         $ref: '#/definitions/responses.Err'
